Bug 75510 - DATALOSS FILESAVE: error bars properties in charts are not properly saved
Summary: DATALOSS FILESAVE: error bars properties in charts are not properly saved
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.1.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: highest major
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.3.0 target:4.1.6 target:...
Keywords: bibisectRequest
Depends on:
Blocks: mab4.2
  Show dependency treegraph
 
Reported: 2014-02-25 21:28 UTC by Carlos Sevcik
Modified: 2015-12-17 07:50 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Images illustrating the problem (239.33 KB, image/png)
2014-02-25 21:28 UTC, Carlos Sevcik
Details
Images illustrating the problem (19.30 KB, image/jpeg)
2014-02-25 21:53 UTC, Carlos Sevcik
Details
Images illustrating the problem (19.35 KB, image/jpeg)
2014-02-25 21:53 UTC, Carlos Sevcik
Details
Images illustrating the problem (239.33 KB, image/png)
2014-02-25 21:54 UTC, Carlos Sevcik
Details
Zipped file with explanatory Calc spreadsheet and two images (79.78 KB, application/zip)
2014-02-27 13:48 UTC, Carlos Sevcik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Carlos Sevcik 2014-02-25 21:28:53 UTC
Created attachment 94731 [details]
Images illustrating the problem

Problem description: 

Steps to reproduce:
1. Create a spreadsheet
2. Create a set n of data rows each one containing an x value column, an y value column and two columns containing some asymmetric error bar values, something like:

1   3  .2   .1
3   4  .5   .3
.   .   .    .

and so on. Use the leftmost column a x values, the next column as y, and the other two columns as negative and positive range limits. Use positive and negative error indicators with the "same values for both" box unchecked (see mi screen image called BeforeSaving.png). My case the plot should be like my Plot_Before_saving_and_reopening_calc.jpg image. Now save the spreadsheet.
3. Reopen the spreadsheet and now the saved error bar properties look like in PropertiesAfterSavingAndReopeningCalc.png and the saved plot will look like Plot_after_saving_and_reopening_calc.jpg.

Current behavior: The errorbars of asimetric error bars (line width, color and the unchecked condition of the "same values for both" box) are not saved.

Expected behavior: The same plot asymmetric error bars should appear onece and again after opening and closing a Calc spreadsheet.


              
Operating System: Ubuntu
Version: 4.2.0.4 release
Comment 1 Carlos Sevcik 2014-02-25 21:53:03 UTC
Created attachment 94732 [details]
Images illustrating the problem
Comment 2 Carlos Sevcik 2014-02-25 21:53:53 UTC
Created attachment 94733 [details]
Images illustrating the problem
Comment 3 Carlos Sevcik 2014-02-25 21:54:50 UTC
Created attachment 94734 [details]
Images illustrating the problem
Comment 4 Joel Madero 2014-02-27 03:07:17 UTC
Please provide an ODS with data - and then simplify the steps as much as possible, always best to have steps enumerated:

1. Do x
2. do Y
3. Do Z

Observed:
Expected:


This helps QA tremendously. Thanks!

Once you attach a document (and if possible provide enumerated steps as to what we should do with THAT document) mark the bug as UNCONFIRMED. Thanks for your understanding
Comment 5 Carlos Sevcik 2014-02-27 13:45:53 UTC
Well, I tried to make a foolproof example in the file I am attaching (Bug.zip). All the instructions are in the spreadsheet, two images are also included. I cannot explain myself any better, so if you can't foolw that it means I am bad at explaining or that you cannot make something foolproof because ..... :-)
Comment 6 Carlos Sevcik 2014-02-27 13:48:37 UTC
Created attachment 94819 [details]
Zipped file with explanatory Calc spreadsheet and two images
Comment 7 Carlos Sevcik 2014-02-27 13:52:08 UTC
"so if you can't foolw" should be "so if you can't folow"

in my prior comment, sorry.
Comment 8 Joel Madero 2014-02-27 14:41:02 UTC
We shall try :) Thanks!
Comment 9 Carlos Sevcik 2014-03-07 01:09:41 UTC
The bug persists in LO 4.2.2.1
Comment 10 Joel Madero 2014-03-07 01:21:43 UTC
So this is really interesting - the value IS saved - it's just not being read correctly. Working on a bibisect now
Comment 11 Joel Madero 2014-03-07 01:35:09 UTC
Well bibisect isn't cooperating so I'll request one

Marking as:
New (confirmed)
Major -- looks like loss of data to the user even though it's not
Highest -- regression 

Adding to MAB

bibisectrequest - Kohei if you don't need feel free to remove the request :)
Comment 12 Commit Notification 2014-03-11 21:41:37 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7470b3ef17570581fe590a4853de59cac1be6ea5

fix negative error bar range export, fdo#75510



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2014-03-11 21:41:53 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5da51525fab4d424b76b681ee70f76b54d99f73d

add test for fdo#75510



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Markus Mohrhard 2014-03-11 21:43:37 UTC
It was a nasty export issue. Actually it was in some of my fixes to get the error bar export fixed for 4.0
Comment 15 Commit Notification 2014-03-11 22:51:28 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e687941b2b5af347a99707783302c0d03b6a5c55&h=libreoffice-4-1

fix negative error bar range export, fdo#75510


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2014-03-11 22:51:54 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=787a663d8579921af4176feeb265dea8aac4d50c&h=libreoffice-4-2

fix negative error bar range export, fdo#75510


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Braulio Dantas 2014-04-26 04:16:26 UTC
This bug is active on my Calc 4.1.3.2. 

It has been a long time error bars are giving me throuble. Right now I notice:

1) No matter how a create them, some times they simply disapear when I operate on other aspects of the chart format or close / open the file.

2) If I copy / paste a graph or simply save it, the error bar format is lost. Sometimes I just loose the format (consistenlty), sometimes I loose the whole bar (seems to be rare, cannot identify well the trigger).

3) If I save the worksheet in MS Excel .xls, the error bars are completly lost.

Those bugs exist since 3.X and seems to be here for a long time. Hope it will be fixed someday sooner than later because error bars are such a usefull feature of Calc.

Regards and thanks,

Braulio Dantas.
Comment 18 Joel Madero 2014-04-26 04:23:58 UTC
please check the dailies - it should be resolved.

http://dev-builds.libreoffice.org/daily/master/
Comment 19 Carlos Sevcik 2014-04-26 17:07:49 UTC
As the original poster of this bug I must say it has been notably ameliorated since now the magnitude of the asymmetric error bars are consistently stored and recovered in LO 4.2.3.3 and 4.2.4.1 . But part of the bug still remains in LO 4.2.4.1 since the properties of the error bar line are either not stored or recovered proparly.

This is, the line thinness and color must be reset to the desired non default values each time the spreadsheet is reopened. Say you set the line thickness for the error barss to 0.02 and the color to red (or any other set of non-default values), the lines will always have thickness 0.00 and color black (the default properties) after saving and reopening.
Comment 20 Markus Mohrhard 2014-04-26 17:31:36 UTC
Open a new bug report for it.
Comment 21 bruno.binet 2014-04-28 17:58:27 UTC
I confirm that the 4 properties of the error bar line are either not stored or recovered proparly in LO 4.2.3 (style, color, width and transparency).

I added DATALOSS since something is lost for the user.

I removed "Asymetric" since this happens also for symetric error bars.

I will open a new bug as suggested by Markus.
Comment 22 Robinson Tryon (qubit) 2015-12-17 07:50:51 UTC
Migrating Whiteboard tags to Keywords: (bibisectrequest)
[NinjaEdit]