fix negative error bar range export, fdo#75510

Change-Id: Icca2f9fc26b15b968a940e5c73f7ad3781f75e94